<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMo"
        android:text="@string/mo"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTu"
        android:text="@string/tu"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvWe"
        android:text="@string/we"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTh"
        android:text="@string/th"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFr"
        android:text="@string/fr"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSt"
        android:text="@string/st"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSu"
        android:text="@string/su"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
</LinearLayout>