<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.webprog26.applicationalarm.MainActivity">
        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker"
            android:layout_alignParentTop="true"
            android:timePickerMode="clock"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/controlsContainer"
            android:layout_below="@+id/timePicker"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chbRepeatAlarm"
                android:text="@string/repeat"
                android:layout_weight="2"
                android:layout_alignParentLeft="true"
                android:checked="true"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chbAlarmVibration"
                android:text="@string/vibration"
                android:layout_weight="2"
                android:layout_alignParentRight="true"
                android:checked="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/daysOfWeekLayout"
            android:layout_below="@+id/controlsContainer"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <include layout="@layout/days_view"
                android:id="@+id/hgg"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/daysOfWeekLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvRingtone"
                android:textColor="@color/colorBlack"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_alignParentRight="true"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSetAlarm"
                android:text="@string/set_alarm"
                android:layout_below="@+id/tvRingtone"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnShowAlarms"
                android:text="@string/show_alarms"
                android:layout_below="@+id/btnSetAlarm"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
